Added assets to .yaml

--- a/frontend/adventure_it/pubspec.yaml
+++ b/frontend/adventure_it/pubspec.yaml
@@ -80,6 +80,9 @@ flutter:
   assets:
     - assets/adventure.PNG
     - assets/logo.png
+    - assets/pfp.png
+    - assets/pdfbutton.png
+    - assets/playbutton.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
