--- a/frontend/adventure_it/pubspec.yaml
+++ b/frontend/adventure_it/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   fluttertoast: ^8.0.8
-
+  url_launcher: ^6.0.12
 dev_dependencies:
   flutter_test:
     sdk: flutter
